# Sparkbot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: capabilities.py  chat.py  chat_status.py  command_center.py  connector_status.py  guardian_status.py  health.py  local_models.py  local_workstation.py  model_seats_status.py  provider_config.py  round_table_status.py  task_lanes_status.py  workstation.py
backend/app/core/: settings.py
backend/app/providers/: __init__.py  chat.py
backend/app/services/: local_model_adapter.py  local_runtime_settings.py  local_workstation_store.py  model_execution.py  provider_runtime.py  workstation_store.py
backend/tests/: test_capabilities.py  test_chat.py  test_chat_status.py  test_chat_workstation_integration.py  test_command_center.py  test_connector_status.py  test_guardian_boundaries.py  test_guardian_status.py  test_health.py  test_local_model_adapter.py  test_local_workstation_runtime.py  test_model_seats_status.py  test_narrow_provider_model_execution.py  test_provider_config_status.py  test_round_table_status.py  test_roundtable_workstation_integration.py  test_task_lanes_status.py  test_workstation_services.py
docs/: BRANCH_HYGIENE.md  CHAT_SHELL.md  CONNECTOR_SAFETY_CONTRACT.md  DESKTOP_PACKAGING_PLAN.md  DESKTOP_SMOKE_READINESS.md  DEVELOPMENT.md  FRONTEND_BASELINE.md  GUARDIAN_CONTROLS_SHELL.md  GUARDIAN_POLICY_CONTRACT.md  LIMA_INSTALL_HANDOFF.md  LIMA_PROVIDER_GUARDIAN_ADAPTER.md  README.md  (+22 more)
(+94 files in other folders)
