[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkbot-backend"
version = "0.1.0"
description = "Minimal public Sparkbot server skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.114,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic-settings>=2.0,<3.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
